--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ img {
     margin: 20px;
     padding: 30px;
     border: solid;
-    border-color: cornflowerblue;
+    border-color: #26428b;
     border-radius: 10px;
 }
 
@@ -50,7 +50,7 @@ a:hover {
 }
 
 .active-link {
-    background-color: cornflowerblue;
+    background-color: #26428b;
     border-radius: 10px;
     padding: 10px;
     color: white;
